src/test/deca/context/invalid/created/decl_int_eq_bool.deca
{
int a = true; //true n'est pas un int

}